Add unswer to the two last questions

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -26,14 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
-    "# Set working dir the same as the `.env` file\n",
+    "# Set working directory to match the location of the `.env` file\n",
     "os.chdir('../../01_materials/labs/')\n",
+    "\n",
+    "# Load env variables from the `.env` file\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv() \n",
     "\n",
@@ -43,13 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import dask\n",
     "dask.config.set({'dataframe.query-planning': True})\n",
-    "import dask.dataframe as dd"
+    "import dask.dataframe as dd\n",
+    "\n",
+    "# Import Dask DataFrame module for handling large datasets in parallel"
    ]
   },
   {
@@ -64,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,14 +84,16 @@
     "import os\n",
     "from glob import glob\n",
     "\n",
-    "# Write your code below.\n",
     "# Load the PRICE_DATA environment variable\n",
     "price_data_dir = os.getenv('PRICE_DATA')\n",
     "print(f\"PRICE_DATA directory: {price_data_dir}\")\n",
     "\n",
+    "# Find all parquet files in the directory\n",
     "parquet_files = glob(os.path.join(price_data_dir, '*/*/*.parquet'))\n",
     "print(f\"Parquet files found: {parquet_files[:5]}\")  # Print the first few files\n",
-    "datad_pf = dd.read_parquet(parquet_files,npartitions=len(\"ticker\")).set_index(\"ticker\")\n"
+    "\n",
+    "# Read the parquet files and set 'ticker' as the index\n",
+    "dd_px = dd.read_parquet(parquet_files,npartitions=len(\"ticker\")).set_index(\"ticker\")\n"
    ]
   },
   {
@@ -112,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\iryna\\AppData\\Local\\Temp\\ipykernel_18688\\3011444353.py:3: UserWarning: `meta` is not specified, inferred from partial data. Please provide `meta` if the result is unexpected.\n",
+      "C:\\Users\\iryna\\AppData\\Local\\Temp\\ipykernel_2948\\1155702827.py:5: UserWarning: `meta` is not specified, inferred from partial data. Please provide `meta` if the result is unexpected.\n",
       "  Before: .apply(func)\n",
       "  After:  .apply(func, meta={'x': 'f8', 'y': 'f8'}) for dataframe result\n",
       "  or:     .apply(func, meta=('x', 'f8'))            for series result\n",
@@ -128,8 +134,10 @@
     }
    ],
    "source": [
-    "# Write your code below.\n",
     "import numpy as np\n",
+    "\n",
+    "# Create new features\n",
+    "\n",
     "dd_feat = (dd_px.groupby('ticker', group_keys=False).apply(\n",
     "    lambda x: x.assign(Close_lag_1 = x['Close'].shift(1))\n",
     ").assign(\n",
@@ -141,327 +149,6 @@
     ").assign(\n",
     "    hi_lo_range = lambda x: (x['High'] - x['Low'])\n",
     "))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Adj Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>sector</th>\n",
-       "      <th>subsector</th>\n",
-       "      <th>year</th>\n",
-       "      <th>Close_lag_1</th>\n",
-       "      <th>Adj_Close</th>\n",
-       "      <th>Adj_Close_lag_1</th>\n",
-       "      <th>returns</th>\n",
-       "      <th>hi_lo_range</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ticker</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>A</th>\n",
-       "      <td>2000-01-03</td>\n",
-       "      <td>56.330471</td>\n",
-       "      <td>56.464592</td>\n",
-       "      <td>48.193848</td>\n",
-       "      <td>51.502148</td>\n",
-       "      <td>43.532223</td>\n",
-       "      <td>4674353</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Life Sciences Tools &amp; Services</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>51.502148</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.270744</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A</th>\n",
-       "      <td>2000-01-04</td>\n",
-       "      <td>48.730328</td>\n",
-       "      <td>49.266811</td>\n",
-       "      <td>46.316166</td>\n",
-       "      <td>47.567955</td>\n",
-       "      <td>40.206841</td>\n",
-       "      <td>4765083</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Life Sciences Tools &amp; Services</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>51.502148</td>\n",
-       "      <td>47.567955</td>\n",
-       "      <td>51.502148</td>\n",
-       "      <td>-0.076389</td>\n",
-       "      <td>2.950645</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A</th>\n",
-       "      <td>2000-01-05</td>\n",
-       "      <td>47.389126</td>\n",
-       "      <td>47.567955</td>\n",
-       "      <td>43.141991</td>\n",
-       "      <td>44.617310</td>\n",
-       "      <td>37.712803</td>\n",
-       "      <td>5758642</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Life Sciences Tools &amp; Services</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>47.567955</td>\n",
-       "      <td>44.617310</td>\n",
-       "      <td>47.567955</td>\n",
-       "      <td>-0.062030</td>\n",
-       "      <td>4.425964</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A</th>\n",
-       "      <td>2000-01-06</td>\n",
-       "      <td>44.080830</td>\n",
-       "      <td>44.349072</td>\n",
-       "      <td>41.577251</td>\n",
-       "      <td>42.918453</td>\n",
-       "      <td>36.276852</td>\n",
-       "      <td>2534434</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Life Sciences Tools &amp; Services</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>44.617310</td>\n",
-       "      <td>42.918453</td>\n",
-       "      <td>44.617310</td>\n",
-       "      <td>-0.038076</td>\n",
-       "      <td>2.771820</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>A</th>\n",
-       "      <td>2000-01-07</td>\n",
-       "      <td>42.247852</td>\n",
-       "      <td>47.165592</td>\n",
-       "      <td>42.203148</td>\n",
-       "      <td>46.494991</td>\n",
-       "      <td>39.299931</td>\n",
-       "      <td>2819626</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Life Sciences Tools &amp; Services</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>42.918453</td>\n",
-       "      <td>46.494991</td>\n",
-       "      <td>42.918453</td>\n",
-       "      <td>0.083333</td>\n",
-       "      <td>4.962444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZTS</th>\n",
-       "      <td>2024-06-27</td>\n",
-       "      <td>174.490005</td>\n",
-       "      <td>181.660004</td>\n",
-       "      <td>174.259995</td>\n",
-       "      <td>176.460007</td>\n",
-       "      <td>176.460007</td>\n",
-       "      <td>4164700</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Pharmaceuticals</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>170.899994</td>\n",
-       "      <td>176.460007</td>\n",
-       "      <td>170.899994</td>\n",
-       "      <td>0.032534</td>\n",
-       "      <td>7.400009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZTS</th>\n",
-       "      <td>2024-06-28</td>\n",
-       "      <td>176.460007</td>\n",
-       "      <td>177.070007</td>\n",
-       "      <td>173.029999</td>\n",
-       "      <td>173.360001</td>\n",
-       "      <td>173.360001</td>\n",
-       "      <td>4189600</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Pharmaceuticals</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>176.460007</td>\n",
-       "      <td>173.360001</td>\n",
-       "      <td>176.460007</td>\n",
-       "      <td>-0.017568</td>\n",
-       "      <td>4.040009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZTS</th>\n",
-       "      <td>2024-07-01</td>\n",
-       "      <td>173.259995</td>\n",
-       "      <td>175.460007</td>\n",
-       "      <td>172.000000</td>\n",
-       "      <td>172.580002</td>\n",
-       "      <td>172.580002</td>\n",
-       "      <td>1589800</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Pharmaceuticals</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>173.360001</td>\n",
-       "      <td>172.580002</td>\n",
-       "      <td>173.360001</td>\n",
-       "      <td>-0.004499</td>\n",
-       "      <td>3.460007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZTS</th>\n",
-       "      <td>2024-07-02</td>\n",
-       "      <td>172.490005</td>\n",
-       "      <td>175.990005</td>\n",
-       "      <td>172.490005</td>\n",
-       "      <td>174.809998</td>\n",
-       "      <td>174.809998</td>\n",
-       "      <td>2454200</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Pharmaceuticals</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>172.580002</td>\n",
-       "      <td>174.809998</td>\n",
-       "      <td>172.580002</td>\n",
-       "      <td>0.012922</td>\n",
-       "      <td>3.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZTS</th>\n",
-       "      <td>2024-07-03</td>\n",
-       "      <td>175.440002</td>\n",
-       "      <td>177.669998</td>\n",
-       "      <td>175.259995</td>\n",
-       "      <td>175.600006</td>\n",
-       "      <td>175.600006</td>\n",
-       "      <td>1251800</td>\n",
-       "      <td>Health Care</td>\n",
-       "      <td>Pharmaceuticals</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>174.809998</td>\n",
-       "      <td>175.600006</td>\n",
-       "      <td>174.809998</td>\n",
-       "      <td>0.004519</td>\n",
-       "      <td>2.410004</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2747827 rows × 15 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Date        Open        High         Low       Close   Adj Close  \\\n",
-       "ticker                                                                          \n",
-       "A      2000-01-03   56.330471   56.464592   48.193848   51.502148   43.532223   \n",
-       "A      2000-01-04   48.730328   49.266811   46.316166   47.567955   40.206841   \n",
-       "A      2000-01-05   47.389126   47.567955   43.141991   44.617310   37.712803   \n",
-       "A      2000-01-06   44.080830   44.349072   41.577251   42.918453   36.276852   \n",
-       "A      2000-01-07   42.247852   47.165592   42.203148   46.494991   39.299931   \n",
-       "...           ...         ...         ...         ...         ...         ...   \n",
-       "ZTS    2024-06-27  174.490005  181.660004  174.259995  176.460007  176.460007   \n",
-       "ZTS    2024-06-28  176.460007  177.070007  173.029999  173.360001  173.360001   \n",
-       "ZTS    2024-07-01  173.259995  175.460007  172.000000  172.580002  172.580002   \n",
-       "ZTS    2024-07-02  172.490005  175.990005  172.490005  174.809998  174.809998   \n",
-       "ZTS    2024-07-03  175.440002  177.669998  175.259995  175.600006  175.600006   \n",
-       "\n",
-       "         Volume       sector                       subsector  year  \\\n",
-       "ticker                                                               \n",
-       "A       4674353  Health Care  Life Sciences Tools & Services  2000   \n",
-       "A       4765083  Health Care  Life Sciences Tools & Services  2000   \n",
-       "A       5758642  Health Care  Life Sciences Tools & Services  2000   \n",
-       "A       2534434  Health Care  Life Sciences Tools & Services  2000   \n",
-       "A       2819626  Health Care  Life Sciences Tools & Services  2000   \n",
-       "...         ...          ...                             ...   ...   \n",
-       "ZTS     4164700  Health Care                 Pharmaceuticals  2024   \n",
-       "ZTS     4189600  Health Care                 Pharmaceuticals  2024   \n",
-       "ZTS     1589800  Health Care                 Pharmaceuticals  2024   \n",
-       "ZTS     2454200  Health Care                 Pharmaceuticals  2024   \n",
-       "ZTS     1251800  Health Care                 Pharmaceuticals  2024   \n",
-       "\n",
-       "        Close_lag_1   Adj_Close  Adj_Close_lag_1   returns  hi_lo_range  \n",
-       "ticker                                                                   \n",
-       "A               NaN   51.502148              NaN       NaN     8.270744  \n",
-       "A         51.502148   47.567955        51.502148 -0.076389     2.950645  \n",
-       "A         47.567955   44.617310        47.567955 -0.062030     4.425964  \n",
-       "A         44.617310   42.918453        44.617310 -0.038076     2.771820  \n",
-       "A         42.918453   46.494991        42.918453  0.083333     4.962444  \n",
-       "...             ...         ...              ...       ...          ...  \n",
-       "ZTS      170.899994  176.460007       170.899994  0.032534     7.400009  \n",
-       "ZTS      176.460007  173.360001       176.460007 -0.017568     4.040009  \n",
-       "ZTS      173.360001  172.580002       173.360001 -0.004499     3.460007  \n",
-       "ZTS      172.580002  174.809998       172.580002  0.012922     3.500000  \n",
-       "ZTS      174.809998  175.600006       174.809998  0.004519     2.410004  \n",
-       "\n",
-       "[2747827 rows x 15 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datad_pf=datad_pf.repartition(npartitions=2)\n",
-    "dd_feat.compute()"
    ]
   },
   {
@@ -477,42 +164,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             Date        Open        High         Low       Close   Adj Close  \\\n",
-      "ticker                                                                          \n",
-      "ZTS    2024-06-27  174.490005  181.660004  174.259995  176.460007  176.460007   \n",
-      "ZTS    2024-06-28  176.460007  177.070007  173.029999  173.360001  173.360001   \n",
-      "ZTS    2024-07-01  173.259995  175.460007  172.000000  172.580002  172.580002   \n",
-      "ZTS    2024-07-02  172.490005  175.990005  172.490005  174.809998  174.809998   \n",
-      "ZTS    2024-07-03  175.440002  177.669998  175.259995  175.600006  175.600006   \n",
-      "\n",
-      "         Volume       sector        subsector  year  Close_lag_1   Adj_Close  \\\n",
-      "ticker                                                                         \n",
-      "ZTS     4164700  Health Care  Pharmaceuticals  2024   170.899994  176.460007   \n",
-      "ZTS     4189600  Health Care  Pharmaceuticals  2024   176.460007  173.360001   \n",
-      "ZTS     1589800  Health Care  Pharmaceuticals  2024   173.360001  172.580002   \n",
-      "ZTS     2454200  Health Care  Pharmaceuticals  2024   172.580002  174.809998   \n",
-      "ZTS     1251800  Health Care  Pharmaceuticals  2024   174.809998  175.600006   \n",
-      "\n",
-      "        Adj_Close_lag_1   returns  hi_lo_range  rolling_avg_return  \n",
-      "ticker                                                              \n",
-      "ZTS          170.899994  0.032534     7.400009            0.000496  \n",
-      "ZTS          176.460007 -0.017568     4.040009            0.001315  \n",
-      "ZTS          173.360001 -0.004499     3.460007            0.001315  \n",
-      "ZTS          172.580002  0.012922     3.500000            0.002402  \n",
-      "ZTS          174.809998  0.004519     2.410004            0.003579  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Write your code below.\n",
-    "datad_pf=datad_pf.repartition(npartitions=2)\n",
+    "# Ensure that the partition size is large enough\n",
+    "dd_px = dd_px.repartition(npartitions=5)\n",
     "# Convert to pandas DataFrame\n",
     "pd_feat = dd_feat.compute()\n",
     "\n",
@@ -520,7 +177,7 @@
     "pd_feat['rolling_avg_return'] = pd_feat['returns'].rolling(window=10).mean()\n",
     "\n",
     "# Display the result\n",
-    "print(pd_feat.tail())"
+    "print(pd_feat.tail())\n"
    ]
   },
   {
@@ -530,7 +187,10 @@
     "Please comment:\n",
     "\n",
     "+ Was it necessary to convert to pandas to calculate the moving average return?\n",
+    "No, Dask can calculate the moving average return directly using its rolling window functions.\n",
+    "\n",
     "+ Would it have been better to do it in Dask? Why?\n",
+    "Yes, due to scalability, performance and efficiency reasons.\n",
     "\n",
     "(1 pt)"
    ]
