--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -32,14 +32,17 @@
    "source": [
     "import os\n",
     "import time\n",
-    "# Set working directory to match the location of the `.env` file\n",
+    "# Set the working directory to the location of the `.env` file\n",
     "os.chdir('../../01_materials/labs/')\n",
     "\n",
     "# Load env variables from the `.env` file\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv() \n",
     "\n",
+    "# Reload the dotenv extension\n",
     "%reload_ext dotenv\n",
+    "\n",
+    "# Load the env variables\n",
     "%dotenv\n"
    ]
   },
@@ -51,9 +54,10 @@
    "source": [
     "import dask\n",
     "dask.config.set({'dataframe.query-planning': True})\n",
-    "import dask.dataframe as dd\n",
     "\n",
-    "# Import Dask DataFrame module for handling large datasets in parallel"
+    "# Import Dask DataFrame module for handling large datasets in parallel\n",
+    "import dask.dataframe as dd\n",
+    "\n"
    ]
   },
   {
@@ -164,19 +168,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "Partition size is less than overlapping window size. Try using ``df.repartition`` to increase the partition size.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m dd_px \u001b[38;5;241m=\u001b[39m dd_px\u001b[38;5;241m.\u001b[39mrepartition(npartitions\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Convert to pandas DataFrame\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m pd_feat \u001b[38;5;241m=\u001b[39m \u001b[43mdd_feat\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Add rolling average return calculation with a window of 10 days\u001b[39;00m\n\u001b[0;32m      7\u001b[0m pd_feat[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrolling_avg_return\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd_feat[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mreturns\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mrolling(window\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\u001b[38;5;241m.\u001b[39mmean()\n",
+      "File \u001b[1;32mc:\\Users\\iryna\\AppData\\Local\\Continuum\\envs\\scale2prod\\Lib\\site-packages\\dask_expr\\_collection.py:476\u001b[0m, in \u001b[0;36mFrameBase.compute\u001b[1;34m(self, fuse, **kwargs)\u001b[0m\n\u001b[0;32m    474\u001b[0m     out \u001b[38;5;241m=\u001b[39m out\u001b[38;5;241m.\u001b[39mrepartition(npartitions\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m    475\u001b[0m out \u001b[38;5;241m=\u001b[39m out\u001b[38;5;241m.\u001b[39moptimize(fuse\u001b[38;5;241m=\u001b[39mfuse)\n\u001b[1;32m--> 476\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mDaskMethodsMixin\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\iryna\\AppData\\Local\\Continuum\\envs\\scale2prod\\Lib\\site-packages\\dask\\base.py:376\u001b[0m, in \u001b[0;36mDaskMethodsMixin.compute\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m    352\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m    353\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Compute this dask collection\u001b[39;00m\n\u001b[0;32m    354\u001b[0m \n\u001b[0;32m    355\u001b[0m \u001b[38;5;124;03m    This turns a lazy Dask collection into its in-memory equivalent.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    374\u001b[0m \u001b[38;5;124;03m    dask.compute\u001b[39;00m\n\u001b[0;32m    375\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 376\u001b[0m     (result,) \u001b[38;5;241m=\u001b[39m \u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtraverse\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    377\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "File \u001b[1;32mc:\\Users\\iryna\\AppData\\Local\\Continuum\\envs\\scale2prod\\Lib\\site-packages\\dask\\base.py:662\u001b[0m, in \u001b[0;36mcompute\u001b[1;34m(traverse, optimize_graph, scheduler, get, *args, **kwargs)\u001b[0m\n\u001b[0;32m    659\u001b[0m     postcomputes\u001b[38;5;241m.\u001b[39mappend(x\u001b[38;5;241m.\u001b[39m__dask_postcompute__())\n\u001b[0;32m    661\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m shorten_traceback():\n\u001b[1;32m--> 662\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[43mschedule\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdsk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeys\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    664\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m repack([f(r, \u001b[38;5;241m*\u001b[39ma) \u001b[38;5;28;01mfor\u001b[39;00m r, (f, a) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(results, postcomputes)])\n",
+      "File \u001b[1;32mc:\\Users\\iryna\\AppData\\Local\\Continuum\\envs\\scale2prod\\Lib\\site-packages\\dask_expr\\_expr.py:1043\u001b[0m, in \u001b[0;36m_combined_parts\u001b[1;34m(prev_part, current_part, next_part, before, after)\u001b[0m\n\u001b[0;32m   1041\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(before, numbers\u001b[38;5;241m.\u001b[39mIntegral):\n\u001b[0;32m   1042\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m prev_part\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m before:\n\u001b[1;32m-> 1043\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(msg)\n\u001b[0;32m   1044\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1045\u001b[0m     prev_part_input \u001b[38;5;241m=\u001b[39m prev_part\n",
+      "\u001b[1;31mNotImplementedError\u001b[0m: Partition size is less than overlapping window size. Try using ``df.repartition`` to increase the partition size."
+     ]
+    }
+   ],
    "source": [
-    "# Ensure that the partition size is large enough\n",
-    "dd_px = dd_px.repartition(npartitions=5)\n",
+    "# Ensure the partitions number is large enough\n",
+    "dd_px = dd_px.repartition(npartitions=10)\n",
+    "\n",
     "# Convert to pandas DataFrame\n",
     "pd_feat = dd_feat.compute()\n",
     "\n",
-    "# Add rolling average return calculation with a window of 10 days\n",
+    "# Calculate 10 day rolling average return\n",
     "pd_feat['rolling_avg_return'] = pd_feat['returns'].rolling(window=10).mean()\n",
     "\n",
-    "# Display the result\n",
+    "# Print results\n",
     "print(pd_feat.tail())\n"
    ]
   },
@@ -187,10 +208,10 @@
     "Please comment:\n",
     "\n",
     "+ Was it necessary to convert to pandas to calculate the moving average return?\n",
-    "No, Dask can calculate the moving average return directly using its rolling window functions.\n",
+    "##### No, Dask can calculate the moving average return directly using its rolling window functions.\n",
     "\n",
     "+ Would it have been better to do it in Dask? Why?\n",
-    "Yes, due to scalability, performance and efficiency reasons.\n",
+    "##### Yes, due to scalability, performance and efficiency reasons.\n",
     "\n",
     "(1 pt)"
    ]
